--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark;
+  themes: lofi --default, forest --prefersdark;
 }
