--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@plugin "daisyui" {
-  themes: lofi --default, forest --prefersdark;
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
